--- a/css/baby.css
+++ b/css/baby.css
@@ -2,6 +2,11 @@ body {
 	background-color: #f2f2f2;
 }
 
+a{
+	text-decoration: none;
+	color: white;
+}
+
 header h1 {
 	margin-left: 550px;
 }
@@ -47,11 +52,12 @@ section p{
 	color: grey;
 }
 
-footer{
+footer p{
 	background-color: #ff8080;
 	font-family: 'Julius Sans One', cursive;
-	color: grey;
-	font-size: 10px;
+	color: white;
+	font-size: 14px;
+	text-align: center;
 }
 
 footer img{
@@ -64,5 +70,5 @@ footer img{
 
 .social li{
 	float: left;
-	margin: auto;
+	margin-top: 30px;
 }
