--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@ body {
 	background-color: #f2f2f2;
 }
 
+a{
+	text-decoration: none;
+	color: white;
+}
+
 header h1 {
 	margin-left: 550px;
 }
@@ -15,8 +20,7 @@ ul {
 	background-color: #ff8080;
 	height: 40px;
 	opacity: 0.75;
-	margin-top: auto;
-	text-indent: 400px;
+	text-indent: 300px;
 
 }
 
@@ -26,7 +30,7 @@ ul li{
 	font-family: 'Julius Sans One', sans-serif;
 	text-transform: uppercase;
 	font-size: 18px;
-	padding: 0.5%
+	padding: 1%
 }
 
 .row{
@@ -72,9 +76,10 @@ ul li{
 
 footer p{
 	background-color: #ff8080;
-	font-family: 'Helvetica';
+	font-family: 'Julius Sans One', cursive;
 	color: white;
-	font-size: 12px;
+	font-size: 14px;
+	text-align: center;
 }
 
 footer img{
@@ -87,5 +92,5 @@ footer img{
 
 .social li{
 	float: left;
-	margin: auto;
+	margin-top: 30px;
 }
