--- a/css/baby.css
+++ b/css/baby.css
@@ -1,4 +1,4 @@
-body {
+body{
 	background-color: #f2f2f2;
 }
 
@@ -31,18 +31,20 @@ ul li{
 	font-family: 'Julius Sans One', sans-serif;
 	text-transform: uppercase;
 	font-size: 18px;
-	padding: 0.5%
+
 }
 
 section h1{
 	color: #ff6666;
 	font-family: 'Julius Sans One', cursive;
 	font-size: 36px;
+	padding: 20px;
 	
 }
 
 section img{
 	width: 500px;
+	padding-left: 20px;
 
 }
 
@@ -50,6 +52,7 @@ section p{
 	font-family: 'Helvetica';
 	margin-top: 20px;
 	color: grey;
+	padding: 20px;
 }
 
 footer p{
